Changed the styles for cref,ref class

--- a/Test_First_With_Rails.html
+++ b/Test_First_With_Rails.html
@@ -628,6 +628,7 @@ another method:</p>
      <pre class='external'>1     def full_name
 2       name
 3     end
+4   end	
 
 </pre>
 <p>and then call that method:</p>
