images numbers added

--- a/Table_Of_Contents.html
+++ b/Table_Of_Contents.html
@@ -2,17 +2,17 @@
 		<h2>Table Of Contents</h2>
 		<div>
 		<ol class="toc">
-			<li><a href="html/Preface.html">Preface</a></li>
-			<li><a href="html/Introduction.html">Why Test? And How We Test First</a></li>
-			<li><a href="html/Ruby .html">An Introduction To Ruby</a></li>
-			<li><a href="html/RSpec.html">Test First Ruby</a></li>
-			<li><a href="html/RailsIntro.html">Diving Into Rails</a></li>
-			<li><a href="html/ActiveRecordIntro.html">Exploring Active Record</a></li>
-			<li><a href="html/ActiveRecordRSpec.html">Test Driving Model Development</a></li>
-			<li><a href="html/Rake.html">Rake Helps Us Organize Our Ruby Scripts</a></li>
-			<li><a href="html/Migrations.html">Creating Our Database Schema wit Migrations</a></li>
-			<li><a href="html/Controllers.html">Exploring Routes and Controllers</a></li>
-			<li><a href="html/ControllersRSpec.html">Understanding Controllers through Testing</a></li>
+			<li><a href="#ch.preface">Preface</a></li>
+			<li><a href="#ch.intro">Why Test? And How We Test First</a></li>
+			<li><a href="#ch.ruby-intro">An Introduction To Ruby</a></li>
+			<li><a href="#ch.rspec-intro">Test First Ruby</a></li>
+			<li><a href="#ch.firstapp">Diving Into Rails</a></li>
+			<li><a href="#ch.activerecord">Exploring Active Record</a></li>
+			<li><a href="#ch.activerecord-rspec">Test Driving Model Development</a></li>
+			<li><a href="#ch.rake">Rake Helps Us Organize Our Ruby Scripts</a></li>
+			<li><a href="#ch.migrations">Creating Our Database Schema wit Migrations</a></li>
+			<li><a href="#ch.controllers">Exploring Routes and Controllers</a></li>
+			<li><a href="#ch.controllers-rspec">Understanding Controllers through Testing</a></li>
 		</ol>
 		</div>
 </html>
